# MCP-Test-Framework

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
ai/: assertion_oracle.py  flaky_analyzer.py  llm_client.py  mcp_fuzzer.py  nl_test_generator.py  self_healing.py  synthetic_data_generator.py  visual_ai.py
config/: environments.yaml  settings.py
core/: browser_manager.py  mcp_client.py
examples/: demo_server.py
pages/: base_page.py  example_page.py
tests/ai/: test_self_healing_demo.py
tests/mcp/: test_mcp_resources.py  test_mcp_tools.py
tests/ui/: test_example_ui.py
tests/unit/: test_llm_client.py  test_mcp_client.py  test_nl_generator.py  test_self_healing.py  test_settings.py  test_synthetic_data.py  test_visual_ai.py
utils/: logger.py  reporter.py  screenshot_helper.py
